ajustes nas exceptions